# crypto-plan

./: .gitignore  CHANGES_SUMMARY.md  MIGRATION_TO_UV.md  QUICKSTART.md  README_CRYPTO_FETCHER.md  UV_GUIDE.md  pyproject.toml  requirements.txt
docs/: bull_bear_signal_analysis.md  crypto_data_fetcher_guide.md  implementation_summary.md  market_signal_technical_guide.md  pionex_investment_plan.md  telegram_notifier_guide.md
examples/: fetch_crypto_example.py
src/: config.py  crypto_data_fetcher.py  dip_hunter.py  market_signal_monitor.py  market_signal_monitor_v2.py  telegram_notifier.py
